examples/valid/status_code.reqlang
```%config
[prompts]
# Status code the response will return
status_code = ""
```
```%request
GET https://httpbin.org/status/{{?status_code}} HTTP/1.1
```
