examples/invalid/unsed_secret.reqlang
```%config
secrets = ["base_url"]
```

```%request
GET / HTTP/1.1
```
